# prettymaps-fork

./: pyproject.toml  setup.py
prettymapsfork/: __init__.py  draw.py  fetch.py
prettymapsfork/presets/: abraca-redencao.json  barcelona-plotter.json  cb-bf-f.json  default.json  heerhugowaard.json  macao.json  minimal.json
tests/: test_fetch.py
